--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World!</title>
-
+    <style>
+      body, html {
+        margin: 0;
+        padding: 0;
+      }
+      html {
+        box-sizing: border-box;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
   <body>
   <div id="root"></div>
