--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <style>
-      body, html {
+      body {
+        margin: 0 !important;
+        padding: 0 !important;
+      }
+      html, div, * {
         margin: 0;
         padding: 0;
-      }
-      html {
         box-sizing: border-box;
         font-family: sans-serif;
       }
